Variable name changes were made.

--- a/basic_frequency.ipynb
+++ b/basic_frequency.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "lib_count = len(chars) + 1\n",
-    "N = torch.zeros((lib_count, lib_count), dtype = torch.int32)"
+    "Count_Table = torch.zeros((lib_count, lib_count), dtype = torch.int32)"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "    for ch1, ch2 in zip(new_w, new_w[1:]):\n",
     "        ix1 = stoi[ch1]\n",
     "        ix2 = stoi[ch2]\n",
-    "        N[ix1, ix2] += 1"
+    "        Count_Table[ix1, ix2] += 1"
    ]
   },
   {
@@ -112,12 +112,12 @@
     "%matplotlib inline\n",
     "\n",
     "plt.figure(figsize=(16,16))\n",
-    "plt.imshow(N, cmap='Reds')\n",
+    "plt.imshow(Count_Table, cmap='Reds')\n",
     "for i in range(lib_count):\n",
     "    for j in range(lib_count):\n",
     "        couple = itos[i] + itos[j]\n",
     "        plt.text(j, i, couple, ha=\"center\", va=\"bottom\", color=\"gray\")\n",
-    "        plt.text(j, i, N[i,j].item(), ha=\"center\", va=\"top\", color=\"gray\")\n",
+    "        plt.text(j, i, Count_Table[i,j].item(), ha=\"center\", va=\"top\", color=\"gray\")\n",
     "plt.axis(\"off\")"
    ]
   },
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "Frequency_Table = N.float()\n",
+    "Frequency_Table = Count_Table.float()\n",
     "Frequency_Table /= Frequency_Table.sum(1, keepdim=True)\n",
     "Frequency_Table"
    ]
@@ -216,9 +216,11 @@
     "    name = []\n",
     "    i = w_len.item()\n",
     "    while i != 0:\n",
-    "        p = Frequency_Table[ix]\n",
+    "        prob_of_next_chat = Frequency_Table[ix]\n",
     "\n",
-    "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        ix = torch.multinomial(\n",
+    "            prob_of_next_chat, num_samples=1, replacement=True, generator=g\n",
+    "            ).item()\n",
     "        name.append(itos[ix])\n",
     "\n",
     "        if ix == 0 and i - 1 != 0:\n",
