New variables for tensor sizes added. Hidden layer created.

--- a/mlp_neural_network.ipynb
+++ b/mlp_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "905"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
    "source": [
     "# build the vocabulary of characters and mappings to /from integers\n",
     "chars = sorted(list(set(''.join(words)))) # getting the character library\n",
-    "\n",
+    "lib_len = len(chars)\n",
     "stoi = {val:key+1 for key, val in enumerate(chars)}\n",
     "stoi['|'] = 0\n",
     "itos = {ind:st for st, ind in stoi.items()}\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +75,49 @@
      "output_type": "stream",
      "text": [
       "aego\n",
-      "||| ---> a\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m         Y\u001b[39m.\u001b[39mappend(ix)\n\u001b[0;32m     14\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(itos[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m context), \u001b[39m'\u001b[39m\u001b[39m--->\u001b[39m\u001b[39m'\u001b[39m, itos[ix])\n\u001b[1;32m---> 15\u001b[0m         context \u001b[39m=\u001b[39m context[\u001b[39m1\u001b[39;49m:] \u001b[39m+\u001b[39;49m ix \u001b[39m# crop and append\u001b[39;00m\n\u001b[0;32m     17\u001b[0m X \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(X)\n\u001b[0;32m     18\u001b[0m Y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(Y)\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+      "||| ---> a\n",
+      "||a ---> e\n",
+      "|ae ---> g\n",
+      "aeg ---> o\n",
+      "ego ---> |\n",
+      "aelrindel\n",
+      "||| ---> a\n",
+      "||a ---> e\n",
+      "|ae ---> l\n",
+      "ael ---> r\n",
+      "elr ---> i\n",
+      "lri ---> n\n",
+      "rin ---> d\n",
+      "ind ---> e\n",
+      "nde ---> l\n",
+      "del ---> |\n",
+      "aerendyl\n",
+      "||| ---> a\n",
+      "||a ---> e\n",
+      "|ae ---> r\n",
+      "aer ---> e\n",
+      "ere ---> n\n",
+      "ren ---> d\n",
+      "end ---> y\n",
+      "ndy ---> l\n",
+      "dyl ---> |\n",
+      "aeson\n",
+      "||| ---> a\n",
+      "||a ---> e\n",
+      "|ae ---> s\n",
+      "aes ---> o\n",
+      "eso ---> n\n",
+      "son ---> |\n",
+      "afamrail\n",
+      "||| ---> a\n",
+      "||a ---> f\n",
+      "|af ---> a\n",
+      "afa ---> m\n",
+      "fam ---> r\n",
+      "amr ---> a\n",
+      "mra ---> i\n",
+      "rai ---> l\n",
+      "ail ---> |\n"
      ]
     }
    ],
@@ -94,6 +125,7 @@
     "# building the dataset\n",
     "\n",
     "block_size = 3 # context length: how many characters we take to predict the next one\n",
+    "dim_size = 2\n",
     "X, Y = [], []\n",
     "\n",
     "for w in words[:5]:\n",
@@ -109,6 +141,93 @@
     "\n",
     "X = torch.tensor(X)\n",
     "Y = torch.tensor(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([39, 3]), torch.int64, torch.Size([39]), torch.int64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, X.dtype, Y.shape, Y.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = torch.randn((lib_len - 1, dim_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([39, 3, 2])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emb = C[X]\n",
+    "emb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W1 = torch.randn((block_size * dim_size, 100)) # seed\n",
+    "b1 = torch.randn(100) # bias 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.7911, -0.5798,  0.2342,  ...,  0.9349,  0.5874,  0.7574],\n",
+       "        [ 0.9508,  0.9424, -0.9995,  ...,  0.8405,  0.7504, -0.8916],\n",
+       "        [ 0.9863, -0.9988,  0.9836,  ...,  0.1378, -0.8979,  0.8807],\n",
+       "        ...,\n",
+       "        [ 0.9811,  0.7440, -0.9996,  ...,  0.9654,  0.8288, -0.8440],\n",
+       "        [ 1.0000, -0.8650,  0.9999,  ...,  0.9915, -0.9994, -0.0020],\n",
+       "        [-0.9995,  0.9997, -0.9977,  ..., -0.9263,  1.0000,  0.9986]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1) # hidden layer\n",
+    "h"
    ]
   },
   {
