Weights and biases are set. Loss calculations of unoptimized model has been completed.

--- a/mlp_neural_network.ipynb
+++ b/mlp_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "905"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "(torch.Size([39, 3]), torch.int64, torch.Size([39]), torch.int64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,69 +165,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "C = torch.randn((lib_len - 1, dim_size))"
+    "h_neuron_count = 100\n",
+    "g = torch.Generator().manual_seed(412987498012)\n",
+    "C = torch.randn((lib_len, dim_size), generator=g)\n",
+    "W1 = torch.randn((block_size * dim_size, h_neuron_count), generator=g) # weights\n",
+    "b1 = torch.randn(h_neuron_count, generator=g) # biases\n",
+    "W2 = torch.randn((h_neuron_count, lib_len), generator=g) # weights for output layer\n",
+    "b2 = torch.randn(lib_len, generator=g) # biases for output layer\n",
+    "parameters = [C, W1, b1, W2, b2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([39, 3, 2])"
+       "4202"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emb = C[X]\n",
-    "emb.shape"
+    "sum(p.nelement() for p in parameters) # parameter count"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "W1 = torch.randn((block_size * dim_size, 100)) # seed\n",
-    "b1 = torch.randn(100) # bias 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.7911, -0.5798,  0.2342,  ...,  0.9349,  0.5874,  0.7574],\n",
-       "        [ 0.9508,  0.9424, -0.9995,  ...,  0.8405,  0.7504, -0.8916],\n",
-       "        [ 0.9863, -0.9988,  0.9836,  ...,  0.1378, -0.8979,  0.8807],\n",
-       "        ...,\n",
-       "        [ 0.9811,  0.7440, -0.9996,  ...,  0.9654,  0.8288, -0.8440],\n",
-       "        [ 1.0000, -0.8650,  0.9999,  ...,  0.9915, -0.9994, -0.0020],\n",
-       "        [-0.9995,  0.9997, -0.9977,  ..., -0.9263,  1.0000,  0.9986]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(15.6207)\n"
+     ]
     }
    ],
    "source": [
+    "# forward pass\n",
+    "emb = C[X]\n",
     "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1) # hidden layer\n",
-    "h"
+    "logits = h @ W2 + b2\n",
+    "# counts = logits.exp()\n",
+    "# probs = counts / counts.sum(1, keepdims=True)\n",
+    "# loss = -probs[torch.arange(len(Y)), Y].log().mean()\n",
+    "loss = F.cross_entropy(logits, Y) # More readable and efficient way to calculate loss\n",
+    "print(loss)"
    ]
   },
   {
