dataset changed to names.txt and outputs are updated.

--- a/basic_neural_network.ipynb
+++ b/basic_neural_network.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = open(\"data.txt\", encoding=\"utf-8\").read().splitlines()\n",
+    "words = open(\"names.txt\", encoding=\"utf-8\").read().splitlines()\n",
     "words = [i.strip() for i in words if i]\n",
     "\n",
     "# getting the char library from data set\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Library length: 7416\n"
+      "Library length: 228146\n"
      ]
     }
    ],
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normalized Likelihood (Loss): 2.3681437969207764\n"
+      "Normalized Likelihood (Loss): 2.4626340866088867\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "\n",
     "# gradient descent - you can lower the iteration count to see \n",
     "# outputs with not optimized seed\n",
-    "for k in range(500):\n",
+    "for k in range(200):\n",
     "    # forward pass\n",
     "    xenc = F.one_hot(inputs, num_classes=ch_library_len).float() # input to the network\n",
     "    logits = xenc @ W # predict log-counts\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enarhisor\n",
-      "glalanolom\n",
-      "thapion|\n",
-      "narorond\n",
-      "rilthalda\n"
+      "vomiilal\n",
+      "hoboroni\n",
+      "kalanee\n",
+      "brrinte\n",
+      "kefamie\n"
      ]
     }
    ],
