MLP basic implementation has been finished. Trying to optimize the model. Dataset has been split into training, dev and test parts to check the model's state better.

--- a/mlp_neural_network.ipynb
+++ b/mlp_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in all the words\n",
-    "words = open(\"data.txt\", encoding=\"utf-8\").read().splitlines()\n",
+    "words = open(\"names.txt\", encoding=\"utf-8\").read().splitlines()\n",
     "words = [i.strip() for i in words if i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "905"
+       "32033"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,99 +44,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: '-', 2: 'a', 3: 'b', 4: 'c', 5: 'd', 6: 'e', 7: 'f', 8: 'g', 9: 'h', 10: 'i', 11: 'j', 12: 'k', 13: 'l', 14: 'm', 15: 'n', 16: 'o', 17: 'p', 18: 'q', 19: 'r', 20: 's', 21: 't', 22: 'u', 23: 'v', 24: 'w', 25: 'x', 26: 'y', 27: 'z', 28: 'é', 29: 'ë', 30: 'í', 31: 'ó', 32: 'ú', 33: 'û', 34: '’', 0: '|'}\n"
+      "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '|'}\n"
      ]
     }
    ],
    "source": [
     "# build the vocabulary of characters and mappings to /from integers\n",
     "chars = sorted(list(set(''.join(words)))) # getting the character library\n",
-    "lib_len = len(chars)\n",
     "stoi = {val:key+1 for key, val in enumerate(chars)}\n",
     "stoi['|'] = 0\n",
     "itos = {ind:st for st, ind in stoi.items()}\n",
-    "print(itos)"
+    "print(itos)\n",
+    "lib_len = len(itos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 370,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aego\n",
-      "||| ---> a\n",
-      "||a ---> e\n",
-      "|ae ---> g\n",
-      "aeg ---> o\n",
-      "ego ---> |\n",
-      "aelrindel\n",
-      "||| ---> a\n",
-      "||a ---> e\n",
-      "|ae ---> l\n",
-      "ael ---> r\n",
-      "elr ---> i\n",
-      "lri ---> n\n",
-      "rin ---> d\n",
-      "ind ---> e\n",
-      "nde ---> l\n",
-      "del ---> |\n",
-      "aerendyl\n",
-      "||| ---> a\n",
-      "||a ---> e\n",
-      "|ae ---> r\n",
-      "aer ---> e\n",
-      "ere ---> n\n",
-      "ren ---> d\n",
-      "end ---> y\n",
-      "ndy ---> l\n",
-      "dyl ---> |\n",
-      "aeson\n",
-      "||| ---> a\n",
-      "||a ---> e\n",
-      "|ae ---> s\n",
-      "aes ---> o\n",
-      "eso ---> n\n",
-      "son ---> |\n",
-      "afamrail\n",
-      "||| ---> a\n",
-      "||a ---> f\n",
-      "|af ---> a\n",
-      "afa ---> m\n",
-      "fam ---> r\n",
-      "amr ---> a\n",
-      "mra ---> i\n",
-      "rai ---> l\n",
-      "ail ---> |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# building the dataset\n",
     "\n",
     "block_size = 3 # context length: how many characters we take to predict the next one\n",
-    "dim_size = 2\n",
+    "dim_size = 10\n",
     "X, Y = [], []\n",
     "\n",
-    "for w in words[:5]:\n",
-    "    print(w)\n",
+    "for w in words:\n",
+    "    # print(w)\n",
     "    context = [0] * block_size\n",
     "\n",
     "    for ch in w + '|':\n",
     "        ix = stoi[ch]\n",
     "        X.append(context)\n",
     "        Y.append(ix)\n",
-    "        print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
+    "        # print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
     "        context = context[1:] + [ix] # crop and append\n",
     "\n",
     "X = torch.tensor(X)\n",
@@ -145,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([39, 3]), torch.int64, torch.Size([39]), torch.int64)"
+       "(torch.Size([228146, 3]), torch.int64, torch.Size([228146]), torch.int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,11 +114,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([182625, 3]) torch.Size([182625])\n",
+      "torch.Size([22655, 3]) torch.Size([22655])\n",
+      "torch.Size([22866, 3]) torch.Size([22866])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# building the dataset\n",
+    "def build_dataset(words):    \n",
+    "    block_size = 3 # context length: how many characters we take to predict the next one\n",
+    "    X, Y = [], []\n",
+    "\n",
+    "    for w in words:\n",
+    "        # print(w)\n",
+    "        context = [0] * block_size\n",
+    "\n",
+    "        for ch in w + '|':\n",
+    "            ix = stoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            # print(''.join(itos[i] for i in context), '--->', itos[ix])\n",
+    "            context = context[1:] + [ix] # crop and append\n",
+    "\n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)\n",
+    "    print(X.shape, Y.shape)\n",
+    "    return X, Y\n",
+    "\n",
+    "import random\n",
+    "random.seed(42)\n",
+    "random.shuffle(words)\n",
+    "checkpoint_train = int(0.8 * len(words))\n",
+    "checkpoint_dev = int(0.9 * len(words))\n",
+    "\n",
+    "X_train, Y_train = build_dataset(words[:checkpoint_train])\n",
+    "X_dev, Y_dev = build_dataset(words[checkpoint_train:checkpoint_dev])\n",
+    "X_test, Y_test = build_dataset(words[checkpoint_dev:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
-    "h_neuron_count = 100\n",
+    "h_neuron_count = 200\n",
     "g = torch.Generator().manual_seed(412987498012)\n",
     "C = torch.randn((lib_len, dim_size), generator=g)\n",
     "W1 = torch.randn((block_size * dim_size, h_neuron_count), generator=g) # weights\n",
@@ -181,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4202"
+       "11897"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,27 +198,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in parameters:\n",
+    "    p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lre = torch.linspace(-3, 0, 1000) # 1000 numbers between -3 and 0 - equal distances\n",
+    "lrs = 10**lre\n",
+    "lri = []\n",
+    "loss_i = []\n",
+    "step_i = []\n",
+    "learning_rate = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(15.6207)\n"
+      "2.291602849960327\n"
      ]
     }
    ],
    "source": [
-    "# forward pass\n",
-    "emb = C[X]\n",
-    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1) # hidden layer\n",
-    "logits = h @ W2 + b2\n",
-    "# counts = logits.exp()\n",
-    "# probs = counts / counts.sum(1, keepdims=True)\n",
-    "# loss = -probs[torch.arange(len(Y)), Y].log().mean()\n",
-    "loss = F.cross_entropy(logits, Y) # More readable and efficient way to calculate loss\n",
-    "print(loss)"
+    "\n",
+    "for i in range(50000):\n",
+    "    # forward pass\n",
+    "    ix = torch.randint(0, X_train.shape[0], (34,))\n",
+    "    # print(ix.shape)\n",
+    "\n",
+    "    emb = C[X_train[ix]]\n",
+    "    h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1) # hidden layer\n",
+    "    logits = h @ W2 + b2\n",
+    "    # counts = logits.exp()\n",
+    "    # probs = counts / counts.sum(1, keepdims=True)\n",
+    "    # loss = -probs[torch.arange(len(Y)), Y].log().mean()\n",
+    "    loss = F.cross_entropy(logits, Y_train[ix]) # More readable and efficient way to calculate loss\n",
+    "    \n",
+    "    #backward pass\n",
+    "    for p in parameters:\n",
+    "        p.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    # learning_rate = lrs[i]\n",
+    "    for p in parameters:\n",
+    "        p.data += -learning_rate * p.grad\n",
+    "\n",
+    "    # stats tracking\n",
+    "    # lri.append(lre[i])\n",
+    "    step_i.append(i)\n",
+    "    loss_i.append(loss.log10().item())\n",
+    "\n",
+    "print(loss.item())"
    ]
   },
   {
@@ -229,7 +271,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plt.plot(step_i, loss_i)\n",
+    "# plt.plot(lri, loss_i)\n",
+    "C[X].shape, W1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.105282783508301\n"
+     ]
+    }
+   ],
+   "source": [
+    "emb = C[X_train]\n",
+    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1)\n",
+    "# print(h.shape)\n",
+    "logits = h @ W2 + b2\n",
+    "# print(logits.shape)\n",
+    "loss = F.cross_entropy(logits, Y_train)\n",
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1474034786224365\n"
+     ]
+    }
+   ],
+   "source": [
+    "emb = C[X_dev]\n",
+    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1)\n",
+    "logits = h @ W2 + b2\n",
+    "loss = F.cross_entropy(logits, Y_dev)\n",
+    "print(loss.item())"
+   ]
   }
  ],
  "metadata": {
