Name generation added to MLP NN.

--- a/mlp_neural_network.ipynb
+++ b/mlp_neural_network.ipynb
@@ -320,6 +320,132 @@
     "loss = F.cross_entropy(logits, Y_dev)\n",
     "print(loss.item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prig|\n",
+      "joha|\n",
+      "shaqi|\n",
+      "pomiil|\n",
+      "leyi|\n",
+      "zayah|\n",
+      "nachoralyina|\n",
+      "brys|\n",
+      "kenne|\n",
+      "jaysi|\n",
+      "mike|\n",
+      "kalanden|\n",
+      "itzariet|\n",
+      "arth|\n",
+      "kena|\n",
+      "iselizen|\n",
+      "josie|\n",
+      "dayse|\n",
+      "maau|\n",
+      "aria|\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generating names\n",
+    "g = torch.Generator().manual_seed(412987498012)\n",
+    "\n",
+    "for _ in range(20):\n",
+    "    out = []\n",
+    "    context = [0] * block_size\n",
+    "    while True:\n",
+    "        emb = C[torch.tensor([context])]\n",
+    "        h = torch.tanh(emb.view(1, -1) @ W1 + b1)\n",
+    "        logits = h @ W2 + b2\n",
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "        context = context[1:] + [ix]\n",
+    "        out.append(ix)\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "\n",
+    "    print(''.join(itos[ch] for ch in out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generating names with considering name length frequency\n",
+    "\n",
+    "word_lens = [len(w) for w in words]\n",
+    "word_lens = torch.tensor(word_lens)\n",
+    "\n",
+    "wlenc = F.one_hot(word_lens, num_classes=max(word_lens).item() + 1)\n",
+    "lengths = wlenc.sum(0) # [n, n] -> [n] by adding all columns respectively\n",
+    "\n",
+    "# frequency table of word lengths of data\n",
+    "len_frequency = lengths / lengths.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adelilie\n",
+      "duzail\n",
+      "gorbyn\n",
+      "nashu\n",
+      "chriend\n",
+      "ciylyn|\n",
+      "brihar\n",
+      "innio\n",
+      "khalin\n",
+      "jayla\n",
+      "salderenc\n",
+      "jorin\n",
+      "angelon\n",
+      "kmalaira\n",
+      "pailey|\n",
+      "corihan|\n",
+      "jacin\n",
+      "milia\n",
+      "ndhomi\n",
+      "deboaxe\n"
+     ]
+    }
+   ],
+   "source": [
+    "w_lens = torch.multinomial(len_frequency, num_samples=20, replacement=True, generator=g)\n",
+    "for w_len in w_lens.data :\n",
+    "    out = []\n",
+    "    context = [0] * block_size\n",
+    "    i = w_len.item()\n",
+    "    while i != 0:\n",
+    "        emb = C[torch.tensor([context])]\n",
+    "        h = torch.tanh(emb.view(1, -1) @ W1 + b1)\n",
+    "        logits = h @ W2 + b2\n",
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "        context = context[1:] + [ix]\n",
+    "        out.append(ix)\n",
+    "        if ix == 0 and i - 1 != 0:\n",
+    "            out = []\n",
+    "            context = [0] * block_size\n",
+    "            i = w_len.item()\n",
+    "        else : i -= 1\n",
+    "\n",
+    "    print(''.join(itos[ch] for ch in out))"
+   ]
   }
  ],
  "metadata": {
