refactors made to mlp nn code.

--- a/mlp_neural_network.ipynb
+++ b/mlp_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "32033"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "(torch.Size([228146, 3]), torch.int64, torch.Size([228146]), torch.int64)"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "11897"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,26 +216,25 @@
     "lrs = 10**lre\n",
     "lri = []\n",
     "loss_i = []\n",
-    "step_i = []\n",
-    "learning_rate = 0.01"
+    "step_i = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.291602849960327\n"
+      "2.4132471084594727\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "for i in range(50000):\n",
+    "learning_rate = 0.01\n",
+    "for i in range(30000):\n",
     "    # forward pass\n",
     "    ix = torch.randint(0, X_train.shape[0], (34,))\n",
     "    # print(ix.shape)\n",
@@ -268,9 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([228146, 3, 10]), torch.Size([30, 200]))"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# plt.plot(step_i, loss_i)\n",
     "# plt.plot(lri, loss_i)\n",
@@ -279,82 +289,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.105282783508301\n"
+      "train 2.116943836212158\n",
+      "dev 2.157163381576538\n"
      ]
     }
    ],
    "source": [
-    "emb = C[X_train]\n",
-    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1)\n",
-    "# print(h.shape)\n",
-    "logits = h @ W2 + b2\n",
-    "# print(logits.shape)\n",
-    "loss = F.cross_entropy(logits, Y_train)\n",
-    "print(loss.item())"
+    "torch.no_grad() # gradient tracking disabled for efficiency\n",
+    "def calculate_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (X_train, Y_train),\n",
+    "        'dev': (X_dev, Y_dev),\n",
+    "        'test': (X_test, Y_test)\n",
+    "    }[split]\n",
+    "\n",
+    "    emb = C[x] # (n, block_size, n_embd)\n",
+    "    embcat = emb.view(emb.shape[0], -1) # concat into (n, block_size * n_embd)\n",
+    "    h = torch.tanh(embcat @ W1 + b1) # (n, n_hidden)\n",
+    "    logits = h @ W2 + b2 # (n, vocab_size)\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())\n",
+    "\n",
+    "calculate_loss('train')\n",
+    "calculate_loss('dev')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.1474034786224365\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "emb = C[X_dev]\n",
-    "h = torch.tanh(emb.view(-1, block_size * dim_size) @ W1 + b1)\n",
-    "logits = h @ W2 + b2\n",
-    "loss = F.cross_entropy(logits, Y_dev)\n",
-    "print(loss.item())"
+    "# visiulizing dimension 0 and 1 of the embedding matrix C for all chars\n",
+    "# note that this will only work if the dim_size variable is 2\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.scatter(C[:,0].data, C[:,1].data, s = 200)\n",
+    "for i in range(C.shape[0]):\n",
+    "    plt.text(C[i,0].item(), C[i,1].item(), itos[i], ha=\"center\", va=\"center\", color=\"white\")\n",
+    "plt.grid('minor')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prig|\n",
+      "lawa|\n",
       "joha|\n",
-      "shaqi|\n",
-      "pomiil|\n",
-      "leyi|\n",
-      "zayah|\n",
-      "nachoralyina|\n",
-      "brys|\n",
-      "kenne|\n",
-      "jaysi|\n",
-      "mike|\n",
-      "kalanden|\n",
-      "itzariet|\n",
-      "arth|\n",
-      "kena|\n",
-      "iselizen|\n",
-      "josie|\n",
-      "dayse|\n",
-      "maau|\n",
-      "aria|\n"
+      "shaqiavon|\n",
+      "ilipa|\n",
+      "inzleigh|\n",
+      "hoboroniina|\n",
+      "bryd|\n",
+      "reyla|\n",
+      "aloni|\n",
+      "make|\n",
+      "kalmemenai|\n",
+      "braina|\n",
+      "avaa|\n",
+      "kaya|\n",
+      "isalizabaledir|\n",
+      "daysen|\n",
+      "aam|\n",
+      "aria|\n",
+      "holiyahziraser|\n",
+      "ali|\n"
      ]
     }
    ],
    "source": [
-    "# generating names\n",
+    "# sample - generating names\n",
     "g = torch.Generator().manual_seed(412987498012)\n",
     "\n",
     "for _ in range(20):\n",
